@@ -10,6 +10,7 @@ LanguageTool Change Log
 -English:
     -The spelling rule now accepts words with hyphens if the parts are valid words.
      For example, "web-based" is accepted now. This avoids a lot of false alarms.
+    -Fixed a thread-safety problem in the synthesizer
 
 -Esperanto:
     -added several rules
